Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89711

QAbstractItemView::SelectionMode is not working

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 6.1.0 Alpha
    • 6.0.0
    • Widgets: Itemviews
    • None
    • MSVC 2019 x64
    • All
    • 672d2ea8f414fa5f79f1801d965533b705831921 (qt/tqtc-qtbase/6.1)

      It's is not possible to select multi-rows in QTableWidgets by ctrl+click, even if I set the SelectionMode to QAbstractItemView::ExtendedSelection.

       

      Introduced by c2bc4467f774f430a6d536d9c0e70687dbd2301c

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            chehrlic Christian Ehrlicher
            yzhgu Yunzhou Gu
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes